--- a/.hgignore
+++ b/.hgignore
@@ -1,5 +1,5 @@
 application/logs/(?!index\.html|\.htaccess)
-application/cache/(?!index\.html|\.htaccess)
+application/cache/(!index\.html|\.htaccess)
 environment\.php
 deploy/config
 /*~$
